--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="player-panel">
-      <h2>🎬 Preview</h2>
+      <h2>Preview</h2>
       <div id="anim"></div>
 
       <div id="controls">
@@ -24,7 +24,7 @@
     </div>
 
     <div id="editor-panel">
-      <h2>🎨 Lottie Color Editor</h2>
+      <h2>Lottie Color Editor</h2>
       <p>
         Select a Lottie JSON or TGS file and edit its colors (solid, stroke,
         gradient).
@@ -34,7 +34,7 @@
         <p>1. Upload Lottie JSON or TGS file:</p>
 
         <label for="fileInput" id="customFileInputLabel">
-          Choose File... (No file selected)
+          Choose File ...
         </label>
         <input
           type="file"
