--- a/index.html
+++ b/index.html
@@ -1,87 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Lottie Color Editor</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.12.2/lottie.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
-  </head>
-  <body>
-    <div id="player-panel">
-      <h2>Preview</h2>
-      <div id="anim"></div>
 
-      <div id="controls">
-        <div>
-          <button id="playPauseBtn" class="action-btn">Play</button>
-          <button id="exportBtn" class="action-btn" disabled>Export</button>
-        </div>
-        <input type="range" id="frameSlider" min="0" max="100" value="0" />
-        <span id="frameLabel">Frame: 0</span>
+<head>
+  <meta charset="UTF-8" />
+  <title>Lottie Color Editor</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.12.2/lottie.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
+</head>
+
+<body>
+  <div id="player-panel">
+    <h2>Preview</h2>
+    <div id="anim"></div>
+
+    <div id="controls">
+      <div>
+        <button id="playPauseBtn" class="action-btn">Play</button>
+        <button id="exportBtn" class="action-btn" disabled>Export</button>
+      </div>
+      <input type="range" id="frameSlider" min="0" max="100" value="0" />
+      <div id="frameLabel">
+        <span>Frame:</span>
+        <input type="number" id="frameInput" min="0" max="100" value="0" />
+        <span id="frameTotalLabel">/ 0</span>
       </div>
     </div>
+  </div>
 
-    <div id="editor-panel">
-      <h2>Lottie Color Editor</h2>
-      <p>
-        Select a Lottie JSON or TGS file and edit its colors (solid, stroke,
-        gradient).
-      </p>
+  <div id="editor-panel">
+    <h2>Lottie Color Editor</h2>
+    <p>
+      Select a Lottie JSON or TGS file and edit its colors (fill, stroke,
+      gradients).
+    </p>
 
-      <div class="file-input-section">
-        <p>1. Upload Lottie JSON or TGS file:</p>
+    <div class="file-input-section">
+      <p>1. Upload Lottie JSON or TGS file:</p>
 
-        <label for="fileInput" id="customFileInputLabel">
-          Choose File ...
-        </label>
-        <input
-          type="file"
-          id="fileInput"
-          accept=".json, .tgs"
-          style="display: none"
-        />
+      <div id="drop-zone" class="drop-zone">
+        <div class="drop-zone-content">
+          <svg class="upload-icon" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+            <polyline points="17 8 12 3 7 8"></polyline>
+            <line x1="12" y1="3" x2="12" y2="15"></line>
+          </svg>
+          <p class="drop-text">Drag & Drop your file here</p>
+          <p class="drop-subtext">or click to browse</p>
+        </div>
+        <input type="file" id="fileInput" accept=".json, .tgs" style="display: none" />
       </div>
+      <p id="file-name-display" class="file-name-display"></p>
+    </div>
 
-      <div id="editor-controls">
+    <div id="editor-controls">
+      <div class="controls-header">
         <p>2. Filter & Group Colors:</p>
-        <div id="filter-buttons">
-          <button data-filter="All" class="filter-btn active">All</button>
-          <button data-filter="Fill" class="filter-btn">Fill</button>
-          <button data-filter="Stroke" class="filter-btn">Stroke</button>
-          <button data-filter="Gradient Fill" class="filter-btn">
-            Gradient Fill
-          </button>
-          <button data-filter="Gradient Stroke" class="filter-btn">
-            Gradient Stroke
-          </button>
-        </div>
-        <div id="dedupe-group">
-          <input type="checkbox" id="groupDuplicates" checked />
-          <label for="groupDuplicates">Group duplicate colors</label>
-        </div>
+        <button id="resetBtn" class="action-btn danger-btn" disabled>Reset Colors</button>
       </div>
-
-      <p>3. Edit Colors:</p>
-      <div id="colors">
-        <p class="initial-message">Upload a file to see color controls.</p>
+      <div id="filter-buttons">
+        <button data-filter="All" class="filter-btn active">All</button>
+        <button data-filter="Fill" class="filter-btn">Fill</button>
+        <button data-filter="Stroke" class="filter-btn">Stroke</button>
+        <button data-filter="Gradient Fill" class="filter-btn">
+          Gradient Fill
+        </button>
+        <button data-filter="Gradient Stroke" class="filter-btn">
+          Gradient Stroke
+        </button>
+      </div>
+      <div id="dedupe-group">
+        <input type="checkbox" id="groupDuplicates" checked />
+        <label for="groupDuplicates">Batch matching colors</label>
       </div>
     </div>
 
-    <div id="export-modal" class="modal-overlay" style="display: none">
-      <div class="modal-content">
-        <span class="modal-close">&times;</span>
-        <h3>Choose Export Format</h3>
-        <div class="modal-buttons">
-          <button id="export-as-json" class="action-btn">
-            Export as .json
-          </button>
-          <button id="export-as-tgs" class="action-btn">Export as .tgs</button>
-        </div>
+    <p>3. Edit Colors:</p>
+    <div id="colors">
+      <p class="initial-message">Upload a file to see color controls.</p>
+    </div>
+  </div>
+
+  <div id="export-modal" class="modal-overlay" style="display: none">
+    <div class="modal-content">
+      <span class="modal-close">&times;</span>
+      <h3>Choose Export Format</h3>
+      <p class="modal-description">Select your preferred file format for the edited animation.</p>
+      <div class="modal-buttons">
+        <button id="export-as-json" class="action-btn modal-btn">
+          Export as .json
+        </button>
+        <button id="export-as-tgs" class="action-btn modal-btn">Export as .tgs</button>
       </div>
     </div>
+  </div>
 
-    <script src="script.js"></script>
-  </body>
+  <script type="module" src="js/main.js"></script>
+</body>
+
 </html>
