--- a/index.html
+++ b/index.html
@@ -94,6 +94,17 @@
         </button>
         <button id="export-as-tgs" class="action-btn modal-btn">Export as .tgs</button>
       </div>
+
+      <div class="modal-divider"></div>
+      <h3>Export Frame as SVG</h3>
+
+      <p class="modal-description" style="margin-bottom: 10px; font-size: 0.9rem;">
+        Export frame <input type="number" id="exportFrameInput" class="frame-input inline-input" placeholder="0"
+          min="0" /> as SVG
+      </p>
+      <div class="modal-buttons">
+        <button id="export-as-svg" class="action-btn modal-btn">Export SVG</button>
+      </div>
     </div>
   </div>
 
